Revision history for Perl extension XML::LibXSLT.

not yet released
    - Don't register libxml2 input callbacks twice
        - https://rt.cpan.org/Public/Bug/Display.html?id=60313
    - Fix memory leak with extension functions returning node lists
        - https://rt.cpan.org/Public/Bug/Display.html?id=55623
        - https://rt.cpan.org/Public/Bug/Display.html?id=76596
        - Thanks to Jozef Kutej and Slaven Rezic for the reports.

1.88            Mon 17 Feb 14:44:34 IST 2014
    - Fix t/xml-grammar-failures.t based on the xml:space commentary here:
        - https://mail.gnome.org/archives/xml/2014-February/msg00000.html
        - Caused some failures which were ultimately our fault.

1.87            Mon  3 Feb 10:07:31 IST 2014
    - Decrease the minimum libxslt version again.
        - Setting it as 1.1.28 did not fix the failures, and now we have
        some more tests to test against it.
        - https://rt.cpan.org/Ticket/Display.html?id=92659
        - Thanks to Slaven Rezic for the report.

1.86            Sun  2 Feb 17:06:07 IST 2014
    - Add t/xml-grammar-failures.t to catch test failures in dependent modules.
        - Add some data files for it under t/data/*.
        - This fails on FreeBSD 9.2 currently.

1.85            Sat  1 Feb 16:23:43 IST 2014
    - Add "use strict;" and "use warnings;" globally (CPANTS).
    - Add LICENSE to the MANIFEST.

1.84            Thu 26 Dec 14:19:19 IST 2013
    - Hopefully fix a segmentation fault on Win32 introduced in the last ver.
        - https://rt.cpan.org/Ticket/Display.html?id=91652
        - Thanks to Alexandr Ciornii for the report, and to Nikolay Sivov
        for providing help.

1.83            Sun 22 Dec 18:20:23 IST 2013
    - Get rid of compiler warnings when compiling using CLANG.
        - https://rt.cpan.org/Public/Bug/Display.html?id=91118
        - Thanks to Daniel Macks for the report.

1.82            Wed  6 Nov 13:17:39 IST 2013
    - Makefile.PL: Report LibXSLT mismatch correctly.