@@ -1,6 +1,7 @@
 Revision history for Perl extension XML::LibXSLT.
 
 not yet released
+    - Document input_callbacks methods
     - Don't register libxml2 input callbacks twice
         - https://rt.cpan.org/Public/Bug/Display.html?id=60313
     - Fix memory leak with extension functions returning node lists
